--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --brand-primary: #34553c;
-  --brand-secondary: #5bd44c;
+  --brand-primary: #385a3e;
+  --brand-secondary: #acab6b;
   --bg-light: #f8f9fa;
   --bg-canvas: #e9ecef;
   --sidebar-bg: #ffffff;
